# swig-example

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  liba.cpp  liba.h  swig-example.cpp  swig-example.h
.github/workflows/: codeql-analysis.yml
swig/python/: CMakeLists.txt  setup.py.in
